<resources>
    <string name="app_name">FreshStart</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="num_of_people_onboard">number of person onboard</string>
    <string name="welocme_page_swipe_button"><![CDATA[Swipe to Continue >>>]]></string>
    <string name="copyright">A FreshStart Initiative</string>
    <string name="title_activity_fresh_login">FreshLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fresh_login_button">Login</string>
    <string name="fresh_signup_button">Signup</string>
</resources>