<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FreshWelcomeActivity">

    <ImageButton
        android:layout_width="197dp"
        android:layout_height="84dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:scaleType="fitCenter"
        android:background="@color/colorBackground"
        android:src="@drawable/logo"/>

    <Button
        android:layout_width="207dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp"
        android:text="@string/fresh_login_button"
        android:src="@drawable/logo"/>

    <Button
        android:layout_width="207dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        android:text="@string/fresh_signup_button"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="124dp"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="740dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textSize="8sp"/>

</RelativeLayout>